# dive

./: .clang-format  .clang-format-github-workflow  .clang-format-ignore  .clang-tidy  .clang-tidy-ci  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  Android.mk  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build_and_test.sh  gen-android-mk.sh  grpc.cmake  libarchive.cmake  ndk-build.sh  perfetto.cmake  reformat.sh  replay-with-dump.sh  run-shaders.sh  test  vcpkg.json
capture_service/: CMakeLists.txt  android_application.cc  android_application.h  android_application_test.cc  android_capture_mgr.cc  android_capture_mgr.h  android_capture_mgr_test.cc  android_trace_mgr.cc  android_trace_mgr.h  android_trace_mgr_test.cc  capture_mgr.cc  capture_mgr.h  capture_service_export.h  client.cc  client.h  client_cli.cc  command_utils.cc  command_utils.h  command_utils_win32.cc  constants.h  device_mgr.cc  device_mgr.h  device_mgr_test.cc  dive_client_cli.cc  log.h  perfetto_trace.cc  perfetto_trace.h  perfetto_trace_empty.cc  pm4_capture_service.cc  pm4_capture_service.h  remote_files.h  replay_artifacts.cc  replay_artifacts.h  replay_artifacts_test.cc  server.cc  server.h  service.cc  service.h  task_queue.h  trace_mgr.cc  (+1 more)
capture_service/protos/: dive_service.proto
cli/: CMakeLists.txt  cli.cpp  cli.h  commands.cpp  commands.h  format_output.cpp  format_output.h  fuzz_main.cpp  main.cpp
dive_core/: CMakeLists.txt  analysis.cpp  analysis.h  available_gpu_time.cpp  available_gpu_time.h  available_metrics.cpp  available_metrics.h  capture_data.cpp  capture_data.h  capture_event_info.cpp  capture_event_info.h  command_hierarchy.cpp  command_hierarchy.h  common.cpp  common.h  common.py  context.h  conversions.h  cross_ref.h  data_core.cpp  data_core.h  dive_capture_data.cpp  dive_capture_data.h  dive_command_hierarchy.cpp  dive_command_hierarchy.h  dive_core_init.cpp  dive_core_init.h  dive_file_container.cpp  dive_file_container.h  dive_file_container_private.h  dive_strings.cpp  dive_strings.h  error.cpp  error.h  event_state.cpp  event_state.h  event_state.json  event_state.natvis  generateAdrenoHeader.py  generatePm4Info_adreno.py  (+24 more)
dive_core/common/: common.cpp  common.h  dive_annotation_processor.cpp  dive_annotation_processor.h  dive_capture_format.h  emulate_pm4.cpp  emulate_pm4.h  gpudefs.h  memory_manager_base.h  shader_reflector.cpp  shader_reflector.h  string_utils.cpp  string_utils.h
dive_core/tests/: CMakeLists.txt  available_gpu_time_test.cpp  available_metrics_test.cpp  (+15 more)
gfxr_dump_resources/: CMakeLists.txt  README.md  dump_entry.h  dump_resources_builder_consumer.cpp  dump_resources_builder_consumer.h  gfxr_dump_resources.cpp  gfxr_dump_resources.h  gfxr_dump_resources_main.cpp  gfxr_dump_resources_test.cmake  main.cpp  replay-with-dump.bat  replay-with-dump.sh  state_machine.cpp  state_machine.h  states.cpp  states.h
gfxrecon-vk-optimize/: CMakeLists.txt  aliases.h  find_unreferenced_blocks.cc  find_unreferenced_blocks.h  find_unsubmitted_command_buffers.cc  find_unsubmitted_command_buffers.h  main.cc  process_file.cc  process_file.h  span.h
gpu_time/: CMakeLists.txt  frame_boundary_detector.cpp  frame_boundary_detector.h  frame_boundary_detector_test.cpp  gpu_time.cpp  gpu_time.h  gpu_time_benchmark.cpp  gpu_time_test.cpp
host_cli/: CMakeLists.txt  data_core_wrapper.cpp  data_core_wrapper.h  data_core_wrapper_test.cpp  host_cli_main.cpp  main.cpp  modify_gfxr_test.cmake
layer/: Android.mk  Application.mk  CMakeLists.txt  dispatch.cc  dispatch.h  gles_layer.cc  layer_base.cc  layer_common.cc  layer_common.h  layer_impl.cc  layer_impl.h  log.h  ndk-build.sh  openxr_layer.cc  vk_dispatch.cc  vk_dispatch.h  vk_layer_android.cc  vk_layer_base.cc  vk_layer_impl.cc  vk_layer_impl.h
lrz_validator/: CMakeLists.txt  main.cpp
network/: CMakeLists.txt  base_message_handler.cc  base_message_handler.h  drawcall_filter_config.h  fake_socket_connection.h  log.h  message_handler.h  message_utils.cc  message_utils.h  messages.cc  messages.h  messages_test.cc  platform_net.h  serializable.h  socket_connection.cc  socket_connection.h  tcp_client.cc  tcp_client.h  tcp_client_test.cc  unix_domain_server.cc  unix_domain_server.h  unix_domain_server_test.cc
perfetto_trace/: CMakeLists.txt  gpu_slice_data.cpp  gpu_slice_data.h  trace_reader.cpp  trace_reader.h
plugins/: CMakeLists.txt  README.md  idive_plugin.h  idynamic_library_loader.h  linux_library_loader.cpp  macos_library_loader.cpp  plugin_loader.cpp  plugin_loader.h  plugin_manager.cpp  plugin_manager.h  windows_library_loader.cpp
pydive/: .gitignore  CMakeLists.txt  README.md  py_capture_data.cpp  py_command_hierarchy.cpp  py_common.h  py_dive.cpp  py_event_statecpp  py_marker_data.cpp  py_marker_types.cpp  setup.py
runtime_layer/: CMakeLists.txt  server_message_handler.cc  server_message_handler.h  vk_rt_dispatch.cc  vk_rt_dispatch.h  vk_rt_layer_android.cc  vk_rt_layer_base.cc  vk_rt_layer_impl.cc  vk_rt_layer_impl.h
trace_stats/: CMakeLists.txt  main.cpp  trace_stats.cpp  trace_stats.h
ui/: CMakeLists.txt  Info.plist.in  about_window.cpp  about_window.h  analyze_dialog.cpp  analyze_dialog.h  analyze_window.cpp  analyze_window.h  application_controller.cpp  application_controller.h  buffer_view.cpp  buffer_view.h  capture_file_manager.cpp  capture_file_manager.h  capture_manager.cpp  capture_manager.h  capture_worker.cpp  capture_worker.h  collect_licenses.cmake  color_utils.cpp  color_utils.h  command_buffer_model.cpp  command_buffer_model.h  command_buffer_view.cpp  command_buffer_view.h  command_model.cpp  command_model.h  command_tab_view.cpp  command_tab_view.h  context.h  custom_metatypes.cpp  custom_metatypes.h  debug_utils.h  device_dialog.cpp  device_dialog.h  dive.icns  dive_application.cpp  dive_application.h  dive_tree_view.cpp  dive_tree_view.h  (+104 more)
utils/: CMakeLists.txt  component_files.cpp  component_files.h  component_files_constants.h  component_files_test.cpp  string_utils.cpp  string_utils.h  string_utils_test.cpp  version_info.cpp  version_info.h
(+1169 files in other folders)
